@@ -187,12 +187,13 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <configuration>
-          <includes>
-            <include>dev-support/*</include>
-            <include>pom.xml</include>
-          </includes>
-        </configuration>
+       <configuration>
+          <excludes>
+            <exclude>.gitignore</exclude>
+            <exclude>.git/**</exclude>
+            <exclude>.idea/**</exclude>
+         </excludes>
+       </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
